<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/createRouteFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Nombre de la ruta -->
    <EditText
        android:id="@+id/etRouteName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/trackName"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- MapView -->
    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        app:layout_constraintTop_toBottomOf="@id/etRouteName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Cuadros informativos en 2 filas -->
    <GridLayout
        android:id="@+id/statsContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="2"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/mapView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:text="@string/recording_time"
            android:padding="8dp"
             />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:text="@string/distance"
            android:padding="8dp"
             />
        <EditText
            android:id="@+id/routeTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:autofillHints=""
            android:hint="@string/recording_time"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:layout_marginBottom="60dp"
            android:background="@android:color/transparent"
            android:padding="8dp"

            />

        <EditText
            android:id="@+id/distancia"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:autofillHints=""
            android:hint="@string/distance"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:background="@android:color/transparent"
            android:padding="8dp"

            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:text="@string/speed"
            android:padding="8dp"
             />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:text="@string/average_speed"
            android:padding="8dp"
             />

        <EditText
            android:id="@+id/time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:autofillHints=""
            android:hint="@string/speed"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:layout_marginBottom="40dp"
            android:background="@android:color/transparent"
            android:padding="8dp"

            />

        <EditText
            android:id="@+id/distance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:autofillHints=""
            android:hint="@string/average_speed"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:background="@android:color/transparent"
            android:padding="8dp"

            />
    </GridLayout>

    <!-- Botón de inicio -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnStartRoute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/startRouteBtn"
        android:src="@android:drawable/ic_media_play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Botón de guardar -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnSaveRoute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/saveRouteBtn"
        android:src="@android:drawable/ic_menu_save"
        android:tint="#FFF5F5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="#FFFFFF" />

</androidx.constraintlayout.widget.ConstraintLayout>
